WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66402
Mid-word breaks can occur in the middle of a surrogate pair
https://bugs.webkit.org/show_bug.cgi?id=66402
Summary
Mid-word breaks can occur in the middle of a surrogate pair
mitz
Reported
2011-08-17 13:25:47 PDT
Mid-word breaks can occur in the middle of a surrogate pair
Attachments
Patch
(26.70 KB, patch)
2011-08-17 13:30 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2011-08-17 13:27:08 PDT
<
rdar://problem/9971293
>
mitz
Comment 2
2011-08-17 13:30:02 PDT
Created
attachment 104222
[details]
Patch
Dave Hyatt
Comment 3
2011-08-17 13:44:24 PDT
Comment on
attachment 104222
[details]
Patch r=me
mitz
Comment 4
2011-08-17 13:53:02 PDT
Fixed in
r93237
. <
http://trac.webkit.org/r93237
>
Ryosuke Niwa
Comment 5
2011-09-01 00:46:01 PDT
The test added by this patch is failing on Snow Leopard and the rest. Judging from the expected.png, is this emoji-related and thus only applicable to Lion and above?
Ryosuke Niwa
Comment 6
2011-09-01 00:47:09 PDT
Can we skip it on Windows, Snow Leopard / Leopard, GTK, Qt, etc...?
Ryosuke Niwa
Comment 7
2011-09-07 10:27:27 PDT
Ping mitz & hyatt about skipping or rebaselining this test on Snow Leopard.
Ryosuke Niwa
Comment 8
2011-09-07 10:54:23 PDT
Per Alexey's comment on IRC, I rebaselined the test in
http://trac.webkit.org/changeset/94686
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug