<rdar://problem/9971293> Mid-word breaks can occur in the middle of a surrogate pair https://bugs.webkit.org/show_bug.cgi?id=66402

Reviewed by Dave Hyatt.

Source/WebCore:

Test: fast/text/midword-break-before-surrogate-pair-2.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::LineBreaker::nextLineBreak): Just never allow a mid-word
break before a trailing surrogate.

LayoutTests:

* fast/text/midword-break-before-surrogate-pair-2.html: Added.



Canonical link: https://commits.webkit.org/82239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93237 268f45cc-cd09-0410-ab3c-d52691b4dbfc